fix: sub menu text center alignment

--- a/src/layouts/Base/index.less
+++ b/src/layouts/Base/index.less
@@ -402,6 +402,10 @@
 
 .sub-menu-title {
   display: flex;
+  span {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .menu-item-title-wrapper {
